kubernetes/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: ai-devsecops-backend-service

  spec:
    selector:
      app: ai-devsecops-backend

      ports:
        -port: 80
        targetPort: 5000

        type: ClusterIP
